@@ -1,3 +1,8 @@
+2008-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* qt4/team_graphic_painter.cpp:
+	- fixed a bug of the team_graphic painting for right side teams.
+
 2008-04-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* NEWS:
